		 does to normal registrations. RegisterAllOpenGeneric allows registering a list of open generic types
		 which will be tranformed to a list of matching closed generic types when a collection is requested.
		 (work item 19758).
		-[Core] New RegisterAll(Type, IEnumerable<Registration>) overload added to make registering collections
		 more consistent. (work item 19876)

	Changes:
		-[Core] Func<T> decoratee dependencies in decorators are now verified when calling container.Verify() 
		 (work item 19851).
		-[NuGet] Silverlight NuGet packages are now merged with .NET packages. The separate Silverlight
		 packages still exist, but will be deprecated soon. (work item 19764).

	Bug fixes:
		-[Core] Adding KnownRelationships during ExpressionBuilt would leak to other InstanceProducers when
		 they shared the same Registration. (work item 19796).
		-[Core] The RegisterDecorator method overload that accepts the predicate didn't supply the correct
		 DecoratorPredicateContext when decorating multiple registrations with the same service type. The
		 internal cached used the service type as key, not the InstanceProducer itself. (work item 19780).
		-[Core] The container did not check for possible cyclic dependencies while resolving collections,
		 which could cause a stackoverflow exception. (work item 19849).
		-[Core] The uses friendly (C# like) type names in exception messages, but this failed when displaying
		 a type that was a an array of generic types (example: Tuple<int>[]). In that case a FormatException
		 was thrown (work item 19847).


Version 2.2.3 (v2.2.3 RTM)  2013-05-05
	Small performance improvement and bug fix concerning the use of ResolveUnregisteredType and
	RegisterOpenGeneric.

	Changes:
		-[Core] ResolveUnregisteredType event was triggered more often than needed, which had a negative
		 impact on performance.

	Bug fixes:
		-[Core] Use of ResolveUnregisteredType event (that is primarily consumed by the RegisterOpenGeneric